ajout des clés sur le calcul des règles de gestion applicables

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3043,3 +3043,40 @@ EXTERNAL_LOGBOOK.FATAL=Erreur technique lors de la journalisation d''événement
 
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=Une unité archivistique référence plus d''un groupe d''objets techniques
 CHECK_DATAOBJECTPACKAGE.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=Une unité archivistique référence plus d''un groupe d''objets techniques
+
+STP_COMPUTE_INHERITED_RULES_PREPARATION = Processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.STARTED = Début du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.STARTED.OK = Succès du début du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.OK = Succès du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.KO = Échec du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.WARNING = Avertissement lors du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.FATAL = Erreur technique lors du processus de préparation du calcul des règles de gestion applicables
+
+STP_COMPUTE_INHERITED_RULES = Processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.SATRTED = Début du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.SATRTED.OK = Succès du début du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.OK = Succès du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.KO = Échec du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.WARNING = Avertissement lors du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.FATAL = Erreur technique lors du processus de calcul des règles de gestion applicables
+
+STP_COMPUTE_INHERITED_RULES_FINALIZATION = Processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED = Début du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED.OK = Succès du début du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.OK = Succès du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.KO = Échec du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.WARNING = Avertisssement lors du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL = Erreut technique lors du processus de finalisation du calcul des règles de gestion applicables
+
+COMPUTE_INHERITED_RULES = Calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.STARTED = Début du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.STARTED.OK = Succès du début du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.OK = Succès du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.KO = Échec du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.WARNING = Avertissement lors du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.FATAL = Erreut technique lors du calcul des règles de gestion applicables
+
+STP_PREPARATION.OK = Succès du processus de lancement de la préparation du traitement de préservation
+
+LFC.CHECK_MANIFEST.NOT_FOUND_ATTACHMENT = Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
+
