Correction de l'erreur Fatal dans le cas de mavais Algorithm SIP

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -891,6 +891,8 @@ CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.INVALID_DATAOBJECTVERS
 
 CHECK_DATAOBJECTPACKAGE.EMPTY_REQUIRED_FIELD.KO=Au moins une unité archivistique contient un champ non renseigné dont la valeur est obligatoire
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.EMPTY_REQUIRED_FIELD.KO=Il existe au moins un champ non renseigné dont la valeur est obligatoire
+CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST_DATAOBJECT_VERSION.INVALIDE_ALGO.KO=Au moins un objet déclare un algorithme incorrect.
+CHECK_DATAOBJECTPACKAGE.INVALIDE_ALGO.KO=L''objet déclare un algorithme qui n''est pas conforme aux valeurs attendues.
 
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ATTACHMENT_OBJECTGROUP.KO=Le contrat d''entrée n''autorise pas le rattachement d''un objet à un groupe d''objets existant.
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.MASTER_MANDATORY_REQUIRED.KO=Absence d''un BinaryMaster ou PhysicalMaster dans le groupe d''objets
