ajout des clés sur le calcul des règles de gestion applicables

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1262,6 +1262,7 @@ LFC.CHECK_MANIFEST.CHECK_MANIFEST_WRONG_ATTACHMENT_LINK.KO=Le bordereau de trans
 LFC.CHECK_MANIFEST.NULL_LINK_PARENT_ID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le contrat d''entrée ne déclare pas de nœud de rattachement
 LFC.CHECK_MANIFEST.TOO_MANY_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''est pas unique dans le système
 LFC.CHECK_MANIFEST.TOO_MANY_VERSION_BY_USAGE.KO=Le bordereau de transfert procède à un rattachement en utilisant des éléments hors périmètre
+LFC.CHECK_MANIFEST.NOT_FOUND_ATTACHMENT=Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
 LFC.CHECK_MANIFEST.NOT_FOUND_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
 LFC.CHECK_MANIFEST.UNAUTHORIZED_ATTACHMENT.KO=Le rattachement n''a pas été effectué: le rattachement n''est pas situé dans le périmètre autorisé
 LFC.CHECK_MANIFEST.INVALID_GUID_ATTACHMENT.KO=Le rattachement n''a pas été effectué: l''élément de rattachement est incorrect
@@ -1828,7 +1829,7 @@ UPDATE_UNIT_RULES.FATAL=Erreur technique lors de la mise à jour des règles de 
 
 UPDATE_UNIT_RULES_CHECK_CONSISTENCY.OK=Succès de la vérification de cohérence des actions lors de la mise à jour des règles métadonnées descriptives et de gestion des unités archivistiques
 UPDATE_UNIT_RULES_CONSISTENCY.KO=Échec de la vérification de cohérence des actions lors de la mise à jour des métadonnées descriptives et de gestion des unités archivistiques
-UPDATE_UNIT_RULES_CONSISTENCY.FATAL = Erreur technique lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées descriptives et de gestion des unités archivistiques
+UPDATE_UNIT_RULES_CONSISTENCY.FATAL=Erreur technique lors de la vérification de cohérence des actions lors de la mise à jour des métadonnées descriptives et de gestion des unités archivistiques
 
 
 STP_UPDATE_RUNNING_INGESTS=Processus de mise à jour des entrées en cours
@@ -1963,12 +1964,13 @@ AUDIT_CHECK_OBJECT.OK=Succès de l''audit de la vérification des objets
 AUDIT_CHECK_OBJECT.KO=Échec de l''audit de la vérification des objets
 AUDIT_CHECK_OBJECT.FATAL=Erreur technique lors de l''audit de la vérification des objets
 
-
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT=Audit de l''existence et de l''intégrité des objets
 AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.OK=Succès de l''audit de l''existence et de l''intégrité des objets
 AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.WARNING=Avertissement lors de l''audit de l''existence et de l''intégrité des objets
 AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.KO=Échec de l''audit de l''existence et de l''intégrité des objets
 AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.FATAL=Erreur technique lors de l''audit de l''existence et de l''intégrité des objets
-
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.STARTED=Début de l''audit de l''existence et de l''intégrité des objets
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.STARTED.OK=Succès du début de l''audit de l''existence et de l''intégrité des objets
 
 STP_AUDIT=Processus d''exécution de l''audit
 STP_AUDIT.STARTED.OK=Début du processus d''exécution de l''audit
@@ -3044,39 +3046,36 @@ EXTERNAL_LOGBOOK.FATAL=Erreur technique lors de la journalisation d''événement
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=Une unité archivistique référence plus d''un groupe d''objets techniques
 CHECK_DATAOBJECTPACKAGE.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=Une unité archivistique référence plus d''un groupe d''objets techniques
 
-STP_COMPUTE_INHERITED_RULES_PREPARATION = Processus de préparation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_PREPARATION.STARTED = Début du processus de préparation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_PREPARATION.STARTED.OK = Succès du début du processus de préparation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_PREPARATION.OK = Succès du processus de préparation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_PREPARATION.KO = Échec du processus de préparation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_PREPARATION.WARNING = Avertissement lors du processus de préparation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_PREPARATION.FATAL = Erreur technique lors du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION=Processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.STARTED=Début du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.STARTED.OK=Succès du début du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.OK=Succès du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.KO=Échec du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.WARNING=Avertissement lors du processus de préparation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_PREPARATION.FATAL=Erreur technique lors du processus de préparation du calcul des règles de gestion applicables
 
-STP_COMPUTE_INHERITED_RULES = Processus de calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES.SATRTED = Début du processus de calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES.SATRTED.OK = Succès du début du processus de calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES.OK = Succès du processus de calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES.KO = Échec du processus de calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES.WARNING = Avertissement lors du processus de calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES.FATAL = Erreur technique lors du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES=Processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.SATRTED=Début du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.SATRTED.OK=Succès du début du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.OK=Succès du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.KO=Échec du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.WARNING=Avertissement lors du processus de calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES.FATAL=Erreur technique lors du processus de calcul des règles de gestion applicables
 
-STP_COMPUTE_INHERITED_RULES_FINALIZATION = Processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED = Début du processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED.OK = Succès du début du processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.OK = Succès du processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.KO = Échec du processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.WARNING = Avertisssement lors du processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL = Erreut technique lors du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION=Processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED=Début du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED.OK=Succès du début du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.OK=Succès du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.KO=Échec du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.WARNING=Avertisssement lors du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL=Erreut technique lors du processus de finalisation du calcul des règles de gestion applicables
 
-COMPUTE_INHERITED_RULES = Calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.STARTED = Début du calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.STARTED.OK = Succès du début du calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.OK = Succès du calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.KO = Échec du calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.WARNING = Avertissement lors du calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.FATAL = Erreut technique lors du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES=Calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.STARTED=Début du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.STARTED.OK=Succès du début du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.OK=Succès du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.KO=Échec du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.WARNING=Avertissement lors du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.FATAL=Erreut technique lors du calcul des règles de gestion applicables
 
-STP_PREPARATION.OK = Succès du processus de lancement de la préparation du traitement de préservation
-
-LFC.CHECK_MANIFEST.NOT_FOUND_ATTACHMENT = Le rattachement n''a pas été effectué: l''élément de rattachement n''existe pas dans le système
-
+STP_PREPARATION.OK=Succès du processus de lancement de la préparation du traitement de préservation
