item 5844 - editing workflow and plugins to add computed inherited rules invalidation

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3071,7 +3071,7 @@ STP_COMPUTE_INHERITED_RULES_FINALIZATION.STARTED.OK=Succès du début du process
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.OK=Succès du processus de finalisation du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.KO=Échec du processus de finalisation du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.WARNING=Avertisssement lors du processus de finalisation du calcul des règles de gestion applicables
-STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL=Erreut technique lors du processus de finalisation du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL=Erreur technique lors du processus de finalisation du calcul des règles de gestion applicables
 
 COMPUTE_INHERITED_RULES=Calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.STARTED=Début du calcul des règles de gestion applicables
@@ -3079,6 +3079,14 @@ COMPUTE_INHERITED_RULES.STARTED.OK=Succès du début du calcul des règles de ge
 COMPUTE_INHERITED_RULES.OK=Succès du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.KO=Échec du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.WARNING=Avertissement lors du calcul des règles de gestion applicables
-COMPUTE_INHERITED_RULES.FATAL=Erreut technique lors du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES.FATAL=Erreur technique lors du calcul des règles de gestion applicables
+
+STP_INVALIDATE=Invalidation des règles calculées
+STP_INVALIDATE.STARTED=Début de l''invalidation des règles calculées
+STP_INVALIDATE.STARTED.OK=Succès du début de l''invalidation des règles calculées
+STP_INVALIDATE.OK=Succès de l''invalidation des règles calculées
+STP_INVALIDATE.KO=Échec de l''invalidation des règles calculées
+STP_INVALIDATE.WARNING=Avertissement lors de l''invalidation des règles calculées
+STP_INVALIDATE.FATAL=Erreur technique lors de l''invalidation des règles calculées
 
 STP_PREPARATION.OK=Succès du processus de lancement de la préparation du traitement de préservation
