Bug 5968- add default status on empty distribution OK status

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1747,12 +1747,12 @@ LFC.UPDATE_OBJECT_GROUP.WARNING=Erreur technique lors de la mise à jour du grou
 LFC.UPDATE_OBJECT_GROUP.FATAL=Erreur technique lors de la mise à jour du groupe d''objets
 LFC.UPDATE_OBJECT_GROUP.STARTED=Début de la mise à jour du groupe d''objets
 
-OBJECTS_LIST_EMPTY=Établissement de la liste des objets
-OBJECTS_LIST_EMPTY.STARTED=Début de l''établissement de la liste des objets
-OBJECTS_LIST_EMPTY.OK=Succès de l''établissement de la liste des objets
-OBJECTS_LIST_EMPTY.WARNING=Avertissement lors de l''établissement de la liste des objets : il n''y a pas d''objet pour cette étape
-OBJECTS_LIST_EMPTY.KO=Échec de l''établissement de la liste des objets
-OBJECTS_LIST_EMPTY.FATAL=Erreur technique lors de l''établissement de la liste des objets
+OBJECTS_LIST_EMPTY=Établissement de la liste des éléments
+OBJECTS_LIST_EMPTY.STARTED=Début de l''établissement de la liste des éléments
+OBJECTS_LIST_EMPTY.OK=Succès de l''établissement de la liste des éléments
+OBJECTS_LIST_EMPTY.WARNING=Avertissement lors de l''établissement de la liste des éléments : il n''y a pas d''éléments pour cette étape
+OBJECTS_LIST_EMPTY.KO=Échec de l''établissement de la liste des éléments
+OBJECTS_LIST_EMPTY.FATAL=Erreur technique lors de l''établissement de la liste des éléments
 
 CHECK_RULES=Contrôle de la conformité du fichier des règles de gestion
 CHECK_RULES.STARTED=Début du contrôle de la conformité du fichier des règles de gestion
