item_5935_DELETE_COMPUTED_INHERITED_RULES
item_5935_DELETE_COMPUTED_INHERITED_RULES

item_5935_DELETE_COMPUTED_INHERITED_RULES

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3073,6 +3073,14 @@ STP_COMPUTE_INHERITED_RULES_FINALIZATION.KO=Échec du processus de finalisation 
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.WARNING=Avertisssement lors du processus de finalisation du calcul des règles de gestion applicables
 STP_COMPUTE_INHERITED_RULES_FINALIZATION.FATAL=Erreur technique lors du processus de finalisation du calcul des règles de gestion applicables
 
+STP_COMPUTE_INHERITED_RULES_DELETE=Processus de suppression du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_DELETE.STARTED=Début du processus de suppression du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_DELETE.STARTED.OK=Succès du début du processus de suppression du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_DELETE.OK=Succès du processus de suppression du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_DELETE.KO=Échec du processus de suppression du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_DELETE.WARNING=Avertisssement lors du processus de suppression du calcul des règles de gestion applicables
+STP_COMPUTE_INHERITED_RULES_DELETE.FATAL=Erreur technique lors du processus de suppression du calcul des règles de gestion applicables
+
 COMPUTE_INHERITED_RULES=Calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.STARTED=Début du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.STARTED.OK=Succès du début du calcul des règles de gestion applicables
@@ -3080,6 +3088,14 @@ COMPUTE_INHERITED_RULES.OK=Succès du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.KO=Échec du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.WARNING=Avertissement lors du calcul des règles de gestion applicables
 COMPUTE_INHERITED_RULES.FATAL=Erreur technique lors du calcul des règles de gestion applicables
+
+COMPUTE_INHERITED_RULES_DELETE=Suppression du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_DELETE.STARTED=Début supression du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_DELETE.STARTED.OK=Succès début de suppression du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_DELETE.OK=Succès suppression du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_DELETE.KO=Échec suppression du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_DELETE.WARNING=Avertissement lors de suppression du calcul des règles de gestion applicables
+COMPUTE_INHERITED_RULES_DELETE.FATAL=Erreur technique lors de suppression du calcul des règles de gestion applicables
 
 STP_INVALIDATE=Invalidation des règles calculées
 STP_INVALIDATE.STARTED=Début de l''invalidation des règles calculées
