Item 5922 add Archive Transfer Workflow

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1900,6 +1900,13 @@ EXPORT_DIP.OK=Succès du processus de l''export du DIP
 EXPORT_DIP.KO=Échec du processus de l''export du DIP
 EXPORT_DIP.FATAL=Erreur technique lors de l''export du DIP
 
+ARCHIVE_TRANSFER=Transfer des unités archivistiques
+ARCHIVE_TRANSFER.STARTED=Début du transfer des unités archivistiques
+ARCHIVE_TRANSFER.WARNING=Avertissement lors du transfer des unités archivistiques
+ARCHIVE_TRANSFER.OK=Succès du processus de transfer des unités archivistiques
+ARCHIVE_TRANSFER.KO=Échec du processus de transfer des unités archivistiques
+ARCHIVE_TRANSFER.FATAL=Erreur technique lors du transfer des unités archivistiques
+
 STP_CREATE_MANIFEST=Processus de création du bordereau de mise à disposition
 STP_CREATE_MANIFEST.STARTED.OK=Début du processus de création du bordereau de mise à disposition
 STP_CREATE_MANIFEST.STARTED=Début du processus de création du bordereau de mise à disposition
