--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -164,7 +164,7 @@ STP_BACKUP_SCENARIO.STARTED.OK=Succès du début du processus de sauvegarde des 
 STP_BACKUP_SCENARIO.OK=Succès du processus de sauvegarde des scénarios de préservation
 STP_BACKUP_SCENARIO.KO=Échec du processus de sauvegarde des scénarios de préservation
 STP_BACKUP_SCENARIO.FATAL=Erreur technique lors du processus de sauvegarde des scénarios de préservation
-STP_BACKUP_SCENARIO.FATAL=Avertissement lors du processus de sauvegarde des scénarios de préservation
+STP_BACKUP_SCENARIO.WARNING=Avertissement lors du processus de sauvegarde des scénarios de préservation
 
 IMPORT_PRESERVATION_SCENARIO=Processus d''import du référentiel des scénarios de préservation
 IMPORT_PRESERVATION_SCENARIO.STARTED=Début du processus d''import du référentiel des scénarios de préservation
@@ -1048,18 +1048,6 @@ OG_METADATA_STORAGE.KO=Échec de l''écriture des métadonnées des objets et gr
 OG_METADATA_STORAGE.FATAL=Erreur technique lors de l''écriture des métadonnées des objets et groupes d''objets sur l''offre de stockage
 OG_METADATA_STORAGE.ALREADY_EXECUTED=Action déjà exécutée : Pas d''écriture des métadonnées des objets et groupes d''objets sur l''offre de stockage
 
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.KO=Échec de la vérification des formats
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.NOT_FOUND.KO=Échec de la vérification des formats : Format de l''objet non identifié
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.PUID_NOT_FOUND.KO=Échec de la vérification des formats : Identification du format de l''objet (PUID) absente dans le référentiel interne
-##OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.METADATA_UPDATE.KO=Complétion des métadonnées sur les formats
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.UPDATED_FORMAT.WARNING=Complétion des métadonnées sur les formats
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.NOT_FOUND_REFERENTIAL.KO= Le format de fichier n''a pas été trouvé dans le référentiel Vitam
-#
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.FATAL=Erreur fatal lors de la vérification des formats
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.REFERENTIAL_ERROR.FATAL=Une erreur est survenue lors de la recherche du format de fichier dans le référentiel Vitam
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.OBJECT_NOT_FOUND.FATAL=L''objet à analyser n''a pas été trouvé
-#OG_OBJECTS_FORMAT_CHECK.FILE_FORMAT.TOOL_DOES_NOT_ANSWER.FATAL=L''outil d''analyse des formats de fichier ne répond pas
-
 UNITS_RULES_COMPUTE=Application des règles de gestion et calcul des dates d''échéance
 UNITS_RULES_COMPUTE.UNKNOWN=Application des règles de gestion et calcul des dates d''échéance
 UNITS_RULES_COMPUTE.REF_INCONSISTENCY=Application des règles de gestion et calcul des dates d''échéance
@@ -1184,21 +1172,6 @@ ROLL_BACK=Mise en cohérence des Journaux du Cycle de Vie
 ROLL_BACK.OK=Succès de la mise en cohérence des journaux du cycle de vie
 ROLL_BACK.FATAL=Erreur technique lors de la mise en cohérence des journaux du cycle de vie
 ROLL_BACK.ALREADY_EXECUTED=Action déjà exécutée : Pas de mise en cohérence des journaux de cycle de vie
-
-#LOGBOOK_COMMIT_KO("Erreur lors de l''enregistrement du journal du cycle de vie"),
-#CREATE_LOGBOOK_LIFECYCLE("Création du journal du cycle de vie"),
-#CREATE_LOGBOOK_LIFECYCLE_OK("Journal du cycle de vie créé avec succès"),
-#UPDATE_LOGBOOK_LIFECYCLE_KO("Erreur lors de la mise à jour du journal du cycle de vie"),
-#CHECK_BDO("Vérification de l''empreinte de l''objet"),
-#CHECK_BDO_OK("Empreinte de l''objet vérifié avec succès"),
-#CHECK_BDO_KO("Échec de la vérification de l''empreinte de l''objet"),
-#CHECK_DIGEST("Digest Check, Vérification de l''empreinte des objets"),
-#CHECK_DIGEST_OK("Succès de la vérification de l''empreinte"),
-#CHECK_DIGEST_KO("Échec de la vérification de l''empreinte"),
-#CHECK_DIGEST_STARTED("Début de la vérification de l''empreinte"),
-
-#WORKFLOW_INGEST.OK=Entrée effectuée avec succès
-#WORKFLOW_INGEST.KO=Entrée en Échec
 
 INGEST=Entrée
 INGEST.STARTED=Début de l''entrée du SIP
@@ -1900,12 +1873,12 @@ EXPORT_DIP.OK=Succès du processus de l''export du DIP
 EXPORT_DIP.KO=Échec du processus de l''export du DIP
 EXPORT_DIP.FATAL=Erreur technique lors de l''export du DIP
 
-ARCHIVE_TRANSFER=Processus de transfert des unités archivistiques et des groupes d''objets
-ARCHIVE_TRANSFER.STARTED=Début du processus de transfert des unités archivistiques et des groupes d''objets
-ARCHIVE_TRANSFER.WARNING=Avertissement lors du processus de transfert des unités archivistiques et des groupes d''objets
-ARCHIVE_TRANSFER.OK=Succès du processus de transfert des unités archivistiques et des groupes d''objets
-ARCHIVE_TRANSFER.KO=Échec du processus de transfert des unités archivistiques et des groupes d''objets
-ARCHIVE_TRANSFER.FATAL=Erreur technique lors du processus transfert des unités archivistiques et des groupes d''objets
+ARCHIVE_TRANSFER=Transfert des unités archivistiques et des groupes d''objets
+ARCHIVE_TRANSFER.STARTED=Début du transfert des unités archivistiques et des groupes d''objets
+ARCHIVE_TRANSFER.WARNING=Avertissement lors du transfert des unités archivistiques et des groupes d''objets
+ARCHIVE_TRANSFER.OK=Succès du transfert des unités archivistiques et des groupes d''objets
+ARCHIVE_TRANSFER.KO=Échec du transfert des unités archivistiques et des groupes d''objets
+ARCHIVE_TRANSFER.FATAL=Erreur technique lors du transfert des unités archivistiques et des groupes d''objets
 
 STP_CREATE_MANIFEST=Processus de création du bordereau de mise à disposition
 STP_CREATE_MANIFEST.STARTED.OK=Début du processus de création du bordereau de mise à disposition
@@ -3091,6 +3064,11 @@ EXTERNAL_LOGBOOK=Journalisation d''événements externes
 EXTERNAL_LOGBOOK.OK=Succès de la journalisation d''événements externes
 EXTERNAL_LOGBOOK.KO=Échec de la journalisation d''événements externes
 EXTERNAL_LOGBOOK.FATAL=Erreur technique lors de la journalisation d''événements externes
+
+LFC.EXTERNAL_LOGBOOK=Import des journaux de cycle de vie externes
+LFC.EXTERNAL_LOGBOOK.OK=Succès de l''import des journaux de cycle de vie externes
+LFC.EXTERNAL_LOGBOOK.KO=Échec de l''import des journaux de cycle de vie externes
+LFC.EXTERNAL_LOGBOOK.FATAL=Erreur technique lors de l''import des journaux de cycle de vie externes
 
 CHECK_DATAOBJECTPACKAGE.CHECK_MANIFEST.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=Une unité archivistique référence plus d''un groupe d''objets techniques
 CHECK_DATAOBJECTPACKAGE.ARCHIVEUNIT_REFERENCES_MULTIPLE_OBJECTGROUP.KO=Une unité archivistique référence plus d''un groupe d''objets techniques
