6036 - transfer reply ATR

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -846,6 +846,13 @@ CHECK_HEADER.FATAL=Erreur technique lors de la vérification générale du borde
 CHECK_HEADER.WARNING=Avertissement lors de la vérification générale du bordereau de transfert
 CHECK_HEADER.ALREADY_EXECUTED=Action déjà exécutée : Pas de vérification générale du bordereau de transfert
 
+TRANSFER_REPLY=Traitement de l''ATR adressé par le SAE cible dans le cas d''un transfert
+TRANSFER_REPLY.STARTED=Début du traitement de l''ATR adressé par le SAE cible dans le cas d''un transfert
+TRANSFER_REPLY.OK=Succès du traitement de l''ATR adressé par le SAE cible dans le cas d''un transfert
+TRANSFER_REPLY.KO= Échec du traitement de l''ATR adressé par le SAE cible dans le cas d''un transfert
+TRANSFER_REPLY.FATAL=Échec technique du traitement de l''ATR adressé par le SAE cible dans le cas d''un transfert
+TRANSFER_REPLY.WARNING=Avertissement lors du traitement de l''ATR adressé par le SAE cible dans le cas d''un transfert
+
 PREPARE_STORAGE_INFO=Préparation des informations de stockage
 PREPARE_STORAGE_INFO.STARTED=Début de la préparation des informations de stockage
 PREPARE_STORAGE_INFO.STARTED.OK=Succès du début de la préparation des informations de stockage
