Item #6052 : Update audit evidence to use strategy defined offers
* Add new plugin for StorageStrategies retrieval
* Use storage strategies for offerIds in Evidence Audit check
* Refactor Existence/Integrity audit with new plugin

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2563,6 +2563,13 @@ CHECK_DISTRIBUTION_THRESHOLD.KO=Échec de la vérification des seuils de limitat
 CHECK_DISTRIBUTION_THRESHOLD.FATAL=Erreur technique lors de la vérification des seuils de limitation de traitement des unités archivistiques
 CHECK_DISTRIBUTION_THRESHOLD.WARNING=Avertissement lors de la vérification des seuils de limitation de traitement des unités archivistiques
 
+PREPARE_STORAGE_STRATEGIES=Récupération de la liste des stratégies de stockage
+PREPARE_STORAGE_STRATEGIES.OK=Succès de la récupération de la liste des stratégies de stockage
+PREPARE_STORAGE_STRATEGIES.KO=Échec de la récupération de la liste des stratégies de stockage
+PREPARE_STORAGE_STRATEGIES.FATAL=Erreur technique lors de la récupération de la liste des stratégies de stockage
+PREPARE_STORAGE_STRATEGIES.WARNING=Avertissement lors de la récupération de la liste des stratégies de stockage
+
+
 PREPARE_UPDATE_UNIT_LIST=Préparation de la liste des unités archivistiques à mettre à jour
 PREPARE_UPDATE_UNIT_LIST.OK=Succès de la préparation de la liste des unités archivistiques à mettre à jour
 PREPARE_UPDATE_UNIT_LIST.KO=Échec de la préparation de la liste des unités archivistiques à mettre à jour
